--- a/homepage.css
+++ b/homepage.css
@@ -1,6 +1,7 @@
 .dropdown {
     position: relative;
     display: inline-block;
+    cursor: pointer;
 }
 
 .dropdown-content {
@@ -11,6 +12,7 @@
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     padding: 12px 16px;
     z-index: 1;
+    cursor: pointer;
 }
 .dropdown:hover .dropdown-content {
     display: block;
@@ -25,6 +27,7 @@
 .learn-dropdown {
     position: relative;
     display: inline-block;
+    cursor: pointer;
 }
 
 .learn-content {
@@ -35,6 +38,7 @@
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     padding: 12px 16px;
     z-index: 1;
+    cursor: pointer;
 }
 .learn-dropdown:hover .learn-content {
     display: block;
@@ -47,6 +51,7 @@
     /* margin-left: 200px; */
     background-color: azure;
     position: fixed;
+    margin-top: -10px;
 }
 #logo > img {
     height: 40px;
@@ -85,6 +90,11 @@
 }
 a {
    text-decoration: none;
+   color: black;
+}
+#cart {
+   height: 30px;
+    width: 30px;
 }
 
 
